--- a/index.html
+++ b/index.html
@@ -60,6 +60,15 @@
                     </div>
                     <i class="fas fa-arrow-right link-arrow"></i>
                 </a>
+
+                <a href="https://splitwise.tellsiddh.com" class="link-card" target="_blank" rel="noopener noreferrer">
+                    <i class="fas fa-coins link-icon"></i>
+                    <div class="link-content">
+                        <h2>Splitwise</h2>
+                        <p>splitwise.tellsiddh.com</p>
+                    </div>
+                    <i class="fas fa-arrow-right link-arrow"></i>
+                </a>
             </div>
         </main>
         
