chore: add new links

--- a/index.html
+++ b/index.html
@@ -38,6 +38,7 @@
                     <i class="fas fa-user link-icon"></i>
                     <div class="link-content">
                         <h2>Portfolio</h2>
+                        <p>Explore my work and projects</p>
                         <p>tellsiddh.com</p>
                     </div>
                     <i class="fas fa-arrow-right link-arrow"></i>
@@ -47,6 +48,7 @@
                     <i class="fas fa-blog link-icon"></i>
                     <div class="link-content">
                         <h2>Blog</h2>
+                        <p>Read my latest articles</p>
                         <p>blog.tellsiddh.com</p>
                     </div>
                     <i class="fas fa-arrow-right link-arrow"></i>
@@ -56,6 +58,7 @@
                     <i class="fas fa-brain link-icon"></i>
                     <div class="link-content">
                         <h2>Mind Journal</h2>
+                        <p>Capture your thoughts</p>
                         <p>solilo.tellsiddh.com</p>
                     </div>
                     <i class="fas fa-arrow-right link-arrow"></i>
@@ -65,7 +68,18 @@
                     <i class="fas fa-coins link-icon"></i>
                     <div class="link-content">
                         <h2>Splitwise</h2>
+                        <p>Track your expenses</p>
                         <p>splitwise.tellsiddh.com</p>
+                    </div>
+                    <i class="fas fa-arrow-right link-arrow"></i>
+                </a>
+
+                <a href="https://collection.tellsiddh.com" class="link-card" target="_blank" rel="noopener noreferrer">
+                    <i class="fas fa-bookmark link-icon"></i>
+                    <div class="link-content">
+                        <h2>Collections</h2>
+                        <p>Save your favorite links</p>
+                        <p>collection.tellsiddh.com</p>
                     </div>
                     <i class="fas fa-arrow-right link-arrow"></i>
                 </a>
